[gd_scene load_steps=7 format=3 uid="uid://d2k47elvdnwro"]

[ext_resource type="Texture2D" uid="uid://ye43fktkjqmp" path="res://Assets/level/interactables/box.png" id="1_5mmmv"]
[ext_resource type="Script" path="res://Scripts/box.gd" id="1_yb3b1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q4jn5"]
size = Vector2(24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4le2o"]
atlas = ExtResource("1_5mmmv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_rcdai"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"invisible",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4le2o")
}],
"loop": false,
"name": &"visible",
"speed": 1.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_df0ug"]
size = Vector2(24, 24)

[node name="box" type="CharacterBody2D" groups=["liftable"]]
z_index = 3
scale = Vector2(0.85, 0.85)
collision_layer = 19
collision_mask = 19
script = ExtResource("1_yb3b1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
z_index = 2
shape = SubResource("RectangleShape2D_q4jn5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_rcdai")
animation = &"visible"

[node name="area_detection" type="Area2D" parent="." groups=["touches_toggle_blocks"]]
collision_layer = 194
collision_mask = 194

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_detection"]
shape = SubResource("RectangleShape2D_df0ug")

[node name="Detect_Player_On_Top" type="RayCast2D" parent="."]
target_position = Vector2(0, -15)

[connection signal="area_entered" from="area_detection" to="." method="_on_area_detection_area_entered"]
[connection signal="area_exited" from="area_detection" to="." method="_on_area_detection_area_exited"]
